--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
   <title>CloudMemo</title>
 </head>
 
-<body style="background-color: rgb(195, 253, 242);">
+<body style="background-color: #d7c0ae46;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
