--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
   <title>CloudMemo</title>
 </head>
 
-<body style="background-color: rgb(210, 252, 243)">
+<body style="background-color: rgb(210, 252, 243)" class="mt-5 pt-4">
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
