--- a/Client/index.html
+++ b/Client/index.html
@@ -11,9 +11,11 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>CloudMemo</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#317EFB" />
 </head>
 
-<body style="background-color: rgb(210, 252, 243)" class="mt-5 pt-4">
+<body style="background-color: rgb(210, 252, 243)" class="">
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
