--- a/Client/index.html
+++ b/Client/index.html
@@ -11,6 +11,9 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+     <script src="https://unpkg.com/flowbite@latest/dist/flowbite.min.js"></script>
   <title>CloudMemo</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#317EFB" />
